--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@ writer/cmake-build-debug
 email_sender/email_sender.log
 email_sender/__pycache__
 email_sender/events.py
-csv_files
+/csv_files/
+test
 .DS_Store
 *.idea
 
