--- a/writer/CMakeLists.txt
+++ b/writer/CMakeLists.txt
@@ -1,9 +1,16 @@
 cmake_minimum_required(VERSION 3.28)
 project(EventManager)
-
 set(CMAKE_CXX_STANDARD 20)
 
 include(FetchContent)
+
+FetchContent_Declare(
+        yaml-cpp
+        GIT_REPOSITORY https://github.com/jbeder/yaml-cpp.git
+        GIT_TAG master
+)
+FetchContent_MakeAvailable(yaml-cpp)
+
 FetchContent_Declare(
         rapidcsv
         GIT_REPOSITORY "https://github.com/d99kris/rapidcsv.git"
@@ -11,11 +18,7 @@ FetchContent_Declare(
 )
 FetchContent_MakeAvailable(rapidcsv)
 
-FetchContent_Declare(json URL https://github.com/nlohmann/json/releases/download/v3.11.3/json.tar.xz)
-FetchContent_MakeAvailable(json)
-
 find_package(PostgreSQL REQUIRED)
-
 find_package(PkgConfig REQUIRED)
 pkg_check_modules(LIBPQXX REQUIRED libpqxx)
 
@@ -32,6 +35,6 @@ add_executable(EventManager
 
 target_link_libraries(EventManager PRIVATE rapidcsv)
 target_link_libraries(EventManager PRIVATE pqxx)
-target_link_libraries(EventManager PRIVATE nlohmann_json::nlohmann_json)
+target_link_libraries(EventManager PRIVATE yaml-cpp::yaml-cpp)
 
 add_subdirectory(tests)
