Refactoring and added time remaining prediction to progress bar

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,21 @@
-database_details*
-email_details*
+database_details/*
+!database_details/database_details_example.yaml
+
+email_details/*
+!email_details/email_details_example.yaml
+
 writer/cmake-build-debug
-email_sender/email_sender.log
-email_sender/__pycache__
-email_sender/events.py
-/csv_files/
-test
+email_sender.log
+sender/__pycache__
+
+events/*
+!events/example
+
+failed_emails.xlsx
+successful_emails.xlsx
+
+test.py
+
 .DS_Store
 *.idea
 
